--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  riverpod: ^3.0.3
-  flutter_riverpod: ^3.0.3
-  riverpod_annotation: ^3.0.3
+  flutter_riverpod: ^2.5.1
+  riverpod_annotation: 
   dio: ^5.1.2
   introduction_screen: ^4.0.0
   lottie: ^3.3.2
@@ -45,14 +44,22 @@ dependencies:
   table_calendar: ^3.2.0 
   intl: 
   flutter_launcher_icons: ^0.13.1
+  
+  pretty_dio_logger: ^1.3.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  json_annotation: ^4.8.1
+  freezed: 
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.7.1
-  riverpod_generator: ^3.0.3
-
+  build_runner: ^2.4.7
+  hive_generator: ^2.0.1
+  json_serializable:
+  analyzer: ^6.4.1
+  
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
