--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "dart.flutterHotReloadOnSave": "all",
     "dart.hotReloadOnSave": "all",
     "files.autoSave": "afterDelay",
-    "files.autoSaveDelay": 500
+    "files.autoSaveDelay": 500,
+    "editor.fontSize": 14
 }
