--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   permission_handler:
   url_launcher:
   http: 
+  flutter_polyline_points: ^3.1.0
+  socket_io_client: ^3.1.3
 
 
 
